--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,42 +1,98 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body,html{
+  height: 100vh;
+  width: 100vw;
+  font: 16px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#app{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url(./img/gotobun.jfif);
+  background-size: cover;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+#app #container{
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 2rem;
+  background-color: #fcfcfc90;
+  backdrop-filter: blur(5px);
+  padding: 2% 3%;
+  border-radius: .5rem;
+  box-shadow: -4px 4px 10px 1px rgba(0, 0, 0, 0.2);
 }
 
-.card {
-  padding: 2em;
+#app #container .title{
+  font-weight: bolder;
+  font-size: 1.25rem;
 }
 
-.read-the-docs {
-  color: #888;
+#app #container #user{
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
 }
+
+#app #container #avatar{
+
+}
+
+#app #container #avatar img{
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+}
+
+#app #container #userInfo{
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+#app #container #Education{
+
+}
+
+#app #container #about{
+  display: flex;
+  gap: 2rem;
+}
+
+#app #container #about #contact{
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+
+#app #container #about #contactInfo{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#app #container #about #experiences{
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+#app #container #about .experience .title{
+  font-weight: 600;
+  font-size: 1.05rem;
+}
+
